fix horizontal scrolling

--- a/rails_app/app/assets/stylesheets/dc-collections.css
+++ b/rails_app/app/assets/stylesheets/dc-collections.css
@@ -14,6 +14,7 @@
 
 .dc-collections__card {
   position: relative;
+  width: 100%;
 }
 
 .dc-collections__card-img {
